--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -18,4 +18,11 @@
         ?>
     </div>
 
+    <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
+                        'corpsformulaire' => $this->corpsformulaire,
+                        'valeurformulaire' => $this->valeurformulaire,
+                        'canWrite' => true
+                    ]); 
+    ?>
+
 </div>
