--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -16,5 +16,11 @@
                     'canWrite' => false
                 ]); 
         ?>
+        <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
+                    'corpsformulaire' => $this->corpsformulaire,
+                    'valeurformulaire' => $this->valeurformulaire,
+                    'canWrite' => true
+                ]); 
+        ?>
     </div>
 </div>
