--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -9,20 +9,11 @@
     <?= $this->partialLoop('formulaire/partials/partial-rubrique-display.phtml', $this->rubriques) ?>
 
     <div id='affichage-informations' class='form-horizontal'>
-        <?= $this->partial('formulaire/formLoopInputChamp.phtml', [
-                'rubriques' => isset($this->rubriques) ? $this->rubriques : [],
-                'champsvaleurliste' => isset($this->champsvaleurliste) ? $this->champsvaleurliste : [] ,
-                'listeChampFils' => isset($this->listeChampFils) ? $this->listeChampFils : [] ,
-                'canWrite' => false
-            ]); 
-        ?>
         <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
-                    'corpsformulaire' => $this->corpsformulaire,
-                    'valeurformulaire' => $this->valeurformulaire,
-                    'canWrite' => true
+                    'corpsformulaire' => isset($this->corpsformulaire) ? $this->corpsformulaire : array(),
+                    'valeurformulaire' => isset($this->valeurformulaire) ? $this->valeurformulaire : array(),
+                    'canWrite' => false
                 ]); 
         ?>
     </div>
-
-
 </div>
