--- a/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/edit-descriptif-personnalise.phtml
@@ -24,10 +24,13 @@
             endforeach ?>
         </div>
     </div>
+    
+    <?= '<pre>',var_dump($this->corpsformulaire),'</pre>' ?>
 
     <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
                     'corpsformulaire' => $this->corpsformulaire,
                     'valeurformulaire' => $this->valeurformulaire,
+                    'rubriquedisplay' => $this->rubriques,
                     'canWrite' => true
                 ]); 
         ?>
