rectification rubrique + supp var_dump

--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -12,6 +12,7 @@
         <?= $this->partial('formulaire/partials/partial-form-custom.phtml', [
                     'corpsformulaire' => isset($this->corpsformulaire) ? $this->corpsformulaire : array(),
                     'valeurformulaire' => isset($this->valeurformulaire) ? $this->valeurformulaire : array(),
+                    'rubriquedisplay' => $this->rubriques,
                     'canWrite' => false
                 ]); 
         ?>
