--- a/application/views/scripts/formulaire/partials/partial-form-custom.phtml
+++ b/application/views/scripts/formulaire/partials/partial-form-custom.phtml
@@ -1,5 +1,5 @@
 <?php foreach ($this->corpsformulaire as $rubrique) : ?>
-    <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($rubrique['DEFAULT_DISPLAY']) === false ? 'hide' : '' ?>">
+    <div id='afficher_rubrique-<?= $rubrique['ID_RUBRIQUE'] ?>' class="<?= boolval($this->rubriquedisplay[$rubrique['ID_RUBRIQUE']]['DISPLAY']) === false ? 'hide' : '' ?>">
         <h4 class='h4_subtitle'><?= $rubrique['NOM'] ?></h4>
         <?php if (empty($rubrique['CHAMPS'])): ?>
             <?= 
