--- a/application/views/scripts/calendrier-des-commissions/generationodj.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationodj.phtml
@@ -273,28 +273,44 @@ function retrieveInfoDoss($segment, $dossierInfos) {
                 ),
                 $rubrique['NOM']
             );
-
             foreach ($rubrique['CHAMPS'] as $champ) {
-                // Définition du libellé pour les cases à cocher
-                if ('Case à cocher' === $champ['TYPE']) {
-                    if (true === boolval($champ['VALEUR'])) {
-                        $champ['VALEUR'] = 'Oui';
-                    } else {
-                        $champ['VALEUR'] = 'Non';
+                //Si le champ est un champ Parent alors ....
+                if($champ['ID_TYPECHAMP'] === 6){
+                    foreach ($champ['FILS'] as $champFils) {
+                        addChamp(
+                            $segment,
+                            $serviceUtils->getFullFusionName(
+                                $formulaire['NOM_INTERNE'],
+                                [
+                                    $rubrique['NOM'],
+                                    $champ['NOM'],
+                                    $champFils['NOM']
+                                ]
+                            ),
+                            'Case à cocher' === $champFils['TYPE'] ? ((isset($champFils['VALEUR']) ? boolval($champFils['VALEUR']) : false) ? 'Oui' : 'Non' ) : $champFils['VALEUR']
+                        );
                     }
-                }
-
-                addChamp(
-                    $segment,
-                    $serviceUtils->getFullFusionName(
-                        $formulaire['NOM_INTERNE'],
-                        [
-                            $rubrique['NOM'],
-                            $champ['NOM']
-                        ]
-                    ),
-                    $champ['VALEUR']
-                );
+                }else{
+                    // Définition du libellé pour les cases à cocher
+                    if ('Case à cocher' === $champ['TYPE']) {
+                        if (true === boolval($champ['VALEUR'])) {
+                            $champ['VALEUR'] = 'Oui';
+                        } else {
+                            $champ['VALEUR'] = 'Non';
+                        }
+                    }
+                    addChamp(
+                        $segment,
+                        $serviceUtils->getFullFusionName(
+                            $formulaire['NOM_INTERNE'],
+                            [
+                                $rubrique['NOM'],
+                                $champ['NOM']
+                            ]
+                        ),
+                        $champ['VALEUR']
+                    );
+                }																		
             }
         }
     }
