--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -66,47 +66,58 @@
 
     <div id="saved-fields" class="span6 offset2">
         <?php if(count($this->champs) > 0): ?>
-            <table class="table table-bordered table-condensed">
+            <table class="table table-bordered table-condensed ">
                 <thead>
                     <tr>
+                        <th></th>
                         <th>Nom du champ</th>
                         <th>Type du champ</th>
                         <th></th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id='grp1' class="grp">
                     <?php foreach($this->champs as $champ): ?>
-                        <tr>
-                            <td><?= $champ['NOM'] ?></td>
-                            <td>
-                                <?= $champ['TYPE'] ?>
-                                <?php if($champ['TYPE'] === 'Liste'): ?>
-                                    <?php if(count($champ['VALEURS']) === 0): ?>
-                                        <div class="alert">
-                                            <button type="button" class="close" data-dismiss="alert">&times;</button>
-                                            <strong>Attention !</strong> La liste ne possède aucune valeur, vous devriez en ajouter.
-                                        </div>
-                                    <?php endif ?>
+                            <tr id=<?=$champ['ID_CHAMP']?>>
+                                <td class='tdMove'><i class="icon-move"></i></td>
+                                <td><?= $champ['NOM'] ?></td>
+                                <td>
+                                    <?= $champ['TYPE'] ?>
+                                    <?php if($champ['TYPE'] === 'Liste'): ?>
+                                        <?php if(count($champ['VALEURS']) === 0): ?>
+                                            <div class="alert">
+                                                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                                <strong>Attention !</strong> La liste ne possède aucune valeur, vous devriez en ajouter.
+                                            </div>
+                                        <?php endif ?>
 
-                                    <ul>
-                                        <?php foreach($champ['VALEURS'] as $valeur): ?>
-                                            <li><?= $valeur['VALEUR'] ?></li>
-                                        <?php endforeach ?>
-                                    </ul>
-                                <?php endif ?>
-                            </td>
-                            <td id='actions'>
-                                <div class='text-center'>
-                                    <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
-                                        <i title='Modifier' class='icon-pencil'></i>
-                                    </a>
-                                    <a href="" data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" class="delete-champ">
-                                        <i title='Supprimer' class='icon-trash'></i>
-                                    </a>
-                                </div>
-                            </td>
-                        </tr>
-                    <?php endforeach ?>
+                                        <ul>
+                                            <?php foreach($champ['VALEURS'] as $valeur): ?>
+                                                <li><?= $valeur['VALEUR'] ?></li>
+                                            <?php endforeach ?>
+                                        </ul>
+                                    <?php endif ?>
+                                </td>
+                                <td id='actions'>
+                                    <div class='text-center'>
+                                        <a href="<?= $this->url(['controller' => 'formulaire', 'action' => 'edit-champ', 'rubrique' => $this->rubrique['ID_RUBRIQUE'], 'champ' => $champ['ID_CHAMP']], null, true) ?>">
+                                            <i title='Modifier' class='icon-pencil'></i>
+                                        </a>
+                                        <a href="" data-id="<?= $champ['ID_CHAMP'] ?>" data-rubrique-id="<?= $this->rubrique['ID_RUBRIQUE'] ?>" class="delete-champ">
+                                            <i title='Supprimer' class='icon-trash'></i>
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                        <?php endforeach ?>
+
+                    
+                    
+                        <div id='grp0' class='grp'>
+                            
+
+
+                        </div>
+
                 </tbody>
             </table>
         <?php endif ?>
