ajout dnd edit rubrique + preparation obj envoie requete

--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -64,25 +64,25 @@
                     </div>
                 </div>                
             </div>
-
-
             <?= $this->fieldForm->save ?>
         </form>
     </div>
 
     <div id="saved-fields" class="span6 offset2">
         <?php if(count($this->champs) > 0): ?>
-            <table class="table table-bordered table-condensed">
+            <table class="table table-bordered table-condensed ">
                 <thead>
                     <tr>
+                        <th></th>
                         <th>Nom du champ</th>
                         <th>Type du champ</th>
                         <th></th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id='grp1' class="grp">
                     <?php foreach($this->champs as $champ): ?>
-                        <tr>
+                        <tr id=<?=$champ['ID_CHAMP']?>>
+                            <td class='tdMove'><i class="icon-move"></i></td>
                             <td><?= $champ['NOM'] ?></td>
                             <td>
                                 <?= $champ['TYPE'] ?>
