--- a/application/views/scripts/formulaire/partials/partial-input-champ.phtml
+++ b/application/views/scripts/formulaire/partials/partial-input-champ.phtml
@@ -84,7 +84,7 @@
             </tr>
             <tr>
                 <td>
-                    <button class='btn btn-danger'>X</button>
+                    <span class='btn btn-danger'>X</span>
                     4269
                 </td>
                 <?php foreach($this->champ['CHAMP_FILS'] as $champsFils) :?>
